--- a/index.html
+++ b/index.html
@@ -118,6 +118,11 @@
           <img class="testimonial-img" src="images/ujjwal.jpg" alt="ujjwal-profile">
           <em>Ujjwal, Miami</em>
         </div>
+        <div class="carousel-item">
+          <h2 class="testimonial-text">I sleep with dogs, eat with dogs, play with dogs, bath with dogs, don't think i'm dog😂 this is my love for dogs.I'm a premium customer of tindog, because tindog is for dog lover. </h2>
+          <img class="testimonial-img" src="images/ronit.png" alt="ronit-profile">
+          <em>Ronit, Uganda</em>
+        </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
