changes done in review section

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <em>Rustam, Dubai</em>
         </div>
         <div class="carousel-item">
-          <h2 class="testimonial-text"> Hey guys! I many used to play with dogs every time, being a dog addict person, sometimes I also behave like a dog😛. Thanks to tindog who provides a lot more varieties of dog to make love with them.</h2>
+          <h2 class="testimonial-text"> Hey guys! I mainly used to play with dogs every time, being a dog addict person, sometimes I also behave like a dog😛. Thanks to tindog which provides a lot more varieties of dog to make love with them.</h2>
           <img class="testimonial-img" src="images/prakash.jpg" alt="prakash-profile">
           <em>Prakash, Bangladesh</em>
         </div>
